sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:19: error: not found: value T
v=T(i)
  ^AlgInsertionSort:21: error: not found: value T
while(compteur>0 && T(compteur)>v)
                    ^AlgInsertionSort:23: error: not found: value T
	T(compteur-1)=T(compteur)
        ^AlgInsertionSort:27: error: not found: value T
T(compteur+1)=v
^